# handheld-console

./: .clang-format  .editorconfig  .gitignore
handheld-console/: .ccsproject  .cproject  .project  README.md  board.syscfg
handheld-console/.theia/: settings.json
handheld-console/app/: App.cpp  App.h  main.cpp
handheld-console/assets/: README.md
handheld-console/core/common/: Button.h  ButtonState.h
handheld-console/core/graphics/: Color.h  Geometry.h  README.md
handheld-console/core/runtime/: Game.h
handheld-console/drivers/: README.md
handheld-console/games/menu/: MenuGame.cpp  MenuGame.h
handheld-console/games/snake/: README.md
handheld-console/platform/interfaces/: IAudio.h  IDisplay.h  IInput.h  IPlatform.h  IPower.h  IStorage.h  ITime.h
handheld-console/platform/mspm0/: README.md
software/: .clang-tidy  .clangd
software/game-core/: CMakeLists.txt  README.md
software/game-core/include/app/: App.h
software/game-core/include/core/common/: Button.h  ButtonBits.h  ButtonState.h
software/game-core/include/core/graphics/: Color.h  Font.h  Geometry.h  README.md  TextRenderer.h
software/game-core/include/core/runtime/: Game.h  IGameHost.h  ISceneHost.h  Scene.h  SceneFactory.h  SceneRunner.h  SceneType.h
software/game-core/include/games/menu/: MenuGame.h
software/game-core/include/platform/interfaces/: IAudio.h  IDisplay.h  IInput.h  IPlatform.h  IPower.h  IStorage.h  ITime.h
software/game-core/include/platform/null/: NullPlatform.h
software/game-core/include/scenes/Playground/: PlaygroundScene.h
software/game-core/include/scenes/menu/: MenuScene.h
software/game-core/src/app/: App.cpp
software/game-core/src/core/runtime/: SceneFactory.cpp  SceneRunner.cpp
software/game-core/src/games/menu/: MenuGame.cpp
software/game-core/src/scenes/menu/: MenuScene.cpp
software/game-core/src/scenes/playground/: PlaygroundScene.cpp
software/game-core/tests/: AppSmoke.cpp  CMakeLists.txt  SceneRunnerSmoke.cpp  TextRendererSmoke.cpp
software/game-core/tests/support/: FakePlatform.h
software/host-sim/: CMakeLists.txt  CMakePresets.json  README.md  main.cpp
software/host-sim/app/: main.cpp
software/host-sim/sdl/: CMakeLists.txt  SdlPlatform.cpp  SdlPlatform.h  SdlPlatformAudio.cpp  SdlPlatformDisplay.cpp  SdlPlatformInput.cpp  SdlPlatformPower.cpp  SdlPlatformStorage.cpp  SdlPlatformTime.cpp  main.cpp
